--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".PlayActivity" />
-        <activity android:name=".MyLikeMusicListActivity"/>
+        <activity android:name=".MyLikeMusicListActivity"
+            android:label="我喜欢" android:theme="@style/AppTheme2"/>
         <service
             android:name=".PlayService"
             android:enabled="true"
