--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.0.1'
     compile project(':PagerSlidingTabStriplibrary')
     compile files('libs/xUtils-2.6.14.jar')
+    compile files('libs/jsoup-1.8.3.jar')
 }
